--- a/README.html
+++ b/README.html
@@ -1,6 +1,5 @@
 ---
 layout: default
 ---
-<pre>
-{% include_relative README %}
-</pre>
+{% capture readme %}{% include_relative README.md %}{% endcapture %}
+{{ readme | markdownify }}
